# population

./: .dockerignore  .env  .gitignore  Dockerfile  docker-compose.cd.yaml  docker-compose.ci.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
app/: config.py  database.py  main.py  models.py  schemas.py
app/services/: __init__.py  base.py  wiki.py
app/services/table/: __init__.py  base.py  factory.py  wiki.py
app/utils/: fetchers.py
app/utils/extractors/: __init__.py  base.py  mixin.py  wiki.py
app/utils/parsers/: __init__.py  base.py  wiki.py
