[tool.poetry]
name = "population"
version = "0.1.0"
description = ""
authors = ["OleksandrPrudyvus <pryduvyso20@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.10.1"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
