[tool.poetry]
name = "population"
version = "0.1.0"
description = ""
authors = ["OleksandrPrudyvus <pryduvyso20@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.10.1"
asyncio = "^3.4.3"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.2"
lxml = "^5.2.2"
pydantic-settings = "^2.4.0"
sqlalchemy = "^2.0.32"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 127
exclude = [
    ".venv",
    "__pycache__"
]

[tool.ruff.lint]
select = ["F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true